src/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Source_of_Booking__c</fullName>
        <label>Source of Booking</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sourcing_Mananger__c</fullName>
        <label>Sourcing Mananger</label>
        <picklist>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Baranwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavan Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadip Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omkar Patil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudresh Bhise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratik Paleja</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadar &amp; Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnProcessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking In Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Account Name (Unit Cost)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Source__c</fullName>
        <label>Sub-Source Of Booking</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Tie Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Token_Amount__c</fullName>
        <label>Token Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TDS_Amount_Paid_In_Rs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total TDS Amount Paid (In Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UnitChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Carpet_Area__c</fullName>
        <formula>Unit_No__r.Carpet_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Carpet Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Vacant</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Terrace_Area__c</fullName>
        <formula>Unit_No__r.Terrace_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Terrace Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_status__c</fullName>
        <label>Document Verification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Rejected_Documents__c</fullName>
        <formula>IF(ISPICKVAL(Verification_status__c,&quot;Rejected&quot;), HYPERLINK(&quot;/apex/RejectedDocumentsPage?DocumentHeaderId=&quot;+ Document_Checklist_Header__r.Id ,&quot;Click Here&quot; ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Rejected Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_in_Source_Reference_By_Others__c</fullName>
        <formula>IF( ISNULL( Customer__r.Name_O__c) , &quot;N/A&quot;, &quot;Name -&quot;+Customer__r.Name_O__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Walk-in Source (Reference By Others)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welcome Call Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wing__c</fullName>
        <label>Wing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stack__c</fullName>
        <formula>TEXT(Quotation__r.Total_Stack__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stack</label>
        <type>Text</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Cretaed_On__c</columns>
        <columns>Status__c</columns>
        <columns>Wing__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Allotment_Premium__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SameProjectName</fullName>
        <active>true</active>
        <errorConditionFormula>Project__c != Unit_No__r.Project__c</errorConditionFormula>
        <errorDisplayField>Unit_No__c</errorDisplayField>
        <errorMessage>Project must be same.</errorMessage>
    </validationRules>
</CustomObject>